
  * New upstream release.
    - Add examples of setting the icon title with/without the window
      title in the manual (Closes: #833984).
    - Amend fix for #738794 to restore a check for missing characters
      which are not combining characters.  Also fill in a corresponding
      special case for TrueType fonts (Closes: #827905).
  * Refresh Debian patches.

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 26 Sep 2016 17:48:50 +0200

xterm (325-1) unstable; urgency=medium

  * New upstream release.
    - Further improve fix for #545220 in xterm 248, to avoid conflict
      with combining characters (Closes: #738794).
  * Refresh Debian patches.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 08 Jun 2016 17:39:36 +0200

xterm (324-2) unstable; urgency=medium

  * Enable all hardening options.
  * Remove the menu file (see #741573).
  * Add libxinerama-dev to Build-Depends.
  * Update copy of XTerm FAQ to revision 1.317 (dated 2016/03/21).
  * Bump Standards-Version to 3.9.8.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 08 May 2016 08:32:18 +0200

xterm (324-1) unstable; urgency=medium

  * New upstream release.

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 12 Mar 2016 08:35:48 +0100

xterm (323-1) unstable; urgency=medium

  * New upstream release.
  * Use https for Vcs-* fields.
  * Prefer lynx over lynx-cur in Build-Depends.
  * Bump Standards-Version to 3.9.7, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 10 Mar 2016 18:02:21 +0100

xterm (322-1) unstable; urgency=medium

  * New upstream release.
    - Fix regression due to incorrect fix for compiler warning when
      allocating storage for /etc/shells (Closes: #809646).
  * Update years in debian/copyright.

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 02 Jan 2016 16:17:27 +0100

xterm (321-1) unstable; urgency=medium

  * New upstream release.
  * Run lynx with the -display_charset=utf-8 option when dumping the text
    version of the XTerm FAQ, making the build reproducible.